--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 
         <title>Countdown Timer</title>
         
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
     </head>
 
